# jaswolf

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: bench.py  eval_retrieval.py
deploy/: README.md  jaswolf-mcp-health.service  jaswolf-mcp-health.timer  jaswolf-mcp.service  jaswolf-serve.service
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_PRACTICES.md  BUG_REPORTS.md  EVAL.md  HERMES_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  MCP.md  OPERATIONS.md  SHADOW_MODE.md  TROUBLESHOOTING.md
examples/: hermes_integration.py  quickstart.py  shadow_mode.py
integrations/hermes/: migrate_mem0.py  rescope_memories.py
scripts/: eval_memory.py
src/jaswolf/: __init__.py  calibration.py  cli.py  config.py  consolidation.py  context_builder.py  evals.py  extraction.py  journal.py  keywords.py  mcp_server.py  models.py  retrieval.py  (+4 more)
tests/: conftest.py  test_api.py  test_backup.py  test_calibration.py  test_cli.py  test_consolidation.py  test_context_builder.py  test_context_gate.py  test_embedding_fingerprint.py  test_evals.py  test_extraction.py  test_jasmine_feedback.py  test_journal.py  test_keyword_evidence.py  test_mcp_server.py  test_multiagent_scope.py  test_pin_provenance.py  test_revival.py  test_scoring.py  test_sdk_and_provider.py  test_service.py  test_storage.py  test_temporal.py
(+27 files in other folders)
